[package]
name = "tantivy_test"
version = "0.1.0"
authors = ["ryangreenup <exogenesis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tantivy = "0.14.0"
tempfile = "3.2.0"
glob = "0.3.0"

# So glib doesn't matter
[build]
rustflags = [
	"-C", "link-arg=-static",
]